# seeker-iou

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package.json
.github/workflows/: ci.yml
app/: App.tsx  README.md  app.json  metro.config.js  package.json
app/android/: settings.gradle
app/android/app/: build.gradle
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/java/com/seekeriou/app/: MainActivity.kt  MainApplication.kt
app/android/app/src/main/res/values/: strings.xml
app/src/: polyfills.ts
app/src/context/: AppContext.tsx
app/src/hooks/: useReputation.ts  useVault.ts
app/src/navigation/: AppNavigator.tsx
app/src/screens/: HomeScreen.tsx  PayScreen.tsx  ReceiveScreen.tsx  SettingsScreen.tsx  SettleScreen.tsx  VaultScreen.tsx
app/src/services/: devMode.ts  nfc.ts  payment.ts  storage.ts  vault.ts  wallet.ts
docs/: AUDIT_REPORT.md  HOWITWORKS.md  PRD.md  SECURITY_AUDIT.md
formal_verification/: Proofs.lean  SPEC.md  lake-manifest.json  lakefile.lean
formal_verification/Proofs/: Authorization.lean  BondSlashing.lean  Conservation.lean  Cooldown.lean  ReplayPrevention.lean  State.lean
programs/seeker-iou/: Cargo.toml
programs/seeker-iou-quasar/: Cargo.toml
programs/seeker-iou-quasar/src/: errors.rs  lib.rs  tests.rs
programs/seeker-iou-quasar/src/instructions/: create_vault.rs  deactivate_vault.rs  deposit.rs  mod.rs  reactivate_vault.rs  set_cooldown.rs  set_reserve_ratio.rs  settle_iou.rs  withdraw.rs
programs/seeker-iou/src/: errors.rs  events.rs  lib.rs
programs/seeker-iou/src/instructions/: create_vault.rs  deactivate_vault.rs  deposit.rs  mod.rs  reactivate_vault.rs  set_cooldown.rs  set_reserve_ratio.rs  settle_iou.rs  withdraw.rs
programs/seeker-iou/src/iou/: message.rs
programs/seeker-iou/src/state/: mod.rs  reputation.rs  settlement_record.rs  vault.rs
quasar-program/: Cargo.toml  Quasar.toml
quasar-program/src/: events.rs  lib.rs  state.rs  tests.rs
quasar-program/src/instructions/: create_vault.rs  set_cooldown.rs  settle_iou.rs
quasar-program/src/iou/: message.rs
tests/: benchmark.ts  seeker-iou.ts
