[package]
name = "seeker-iou"
version = "0.1.0"
description = "On-chain vault and settlement protocol for offline peer-to-peer payments via NFC-exchanged signed IOUs"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "seeker_iou"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
